# API_document_translation

./: Dockerfile  main.py  pyproject.toml
DOCS/: README.MD
src/api/v1/: endpoint.py
src/connect_api/: connect_api.py
src/constant/: constant.py
src/service/: translate.py
test/: conftest.py  test.py
tests/: conftest.py  test.py
